H/csound.h

#define MYFLT float
#define MYFLT double
  typedef struct {
    char    *devName;
    int     devNum;
    int     bufSamp_SW;
    int     bufSamp_HW;
    int     nChannels;
    int     sampleFormat;
    float   sampleRate;
  } csRtAudioParams;
  typedef struct {
    char        *opname;
    char        *outypes;
    char        *intypes;
  } opcodeListEntry;
  typedef struct CsoundChannelListEntry_ {
    const char  *name;
    int         type;
  } CsoundChannelListEntry;
  typedef struct CSOUND_  CSOUND;
  typedef struct windat_  WINDAT;
  PUBLIC long csoundGetInputBufferSize(CSOUND *);
  PUBLIC long csoundGetOutputBufferSize(CSOUND *);
  PUBLIC MYFLT *csoundGetInputBuffer(CSOUND *);
  PUBLIC MYFLT *csoundGetOutputBuffer(CSOUND *);
  PUBLIC MYFLT *csoundGetSpin(CSOUND *);
  PUBLIC MYFLT *csoundGetSpout(CSOUND *);
  PUBLIC void csoundSetHostImplementedAudioIO(CSOUND *, int state, int bufSize);
  PUBLIC double csoundGetScoreTime(CSOUND *);
  PUBLIC int csoundIsScorePending(CSOUND *);
  PUBLIC void csoundSetScorePending(CSOUND *, int pending);
  PUBLIC MYFLT csoundGetScoreOffsetSeconds(CSOUND *);
  PUBLIC void csoundSetScoreOffsetSeconds(CSOUND *, MYFLT time);
  PUBLIC void csoundRewindScore(CSOUND *);
  PUBLIC void csoundSetCscoreCallback(CSOUND *,
                                      void (*cscoreCallback_)(CSOUND *));
  PUBLIC CS_PRINTF2 void csoundMessage(CSOUND *, const char *format, ...);
  PUBLIC CS_PRINTF3 void csoundMessageS(CSOUND *,
                                        int attr, const char *format, ...);
  PUBLIC int csoundGetMessageLevel(CSOUND *);
  PUBLIC void csoundSetMessageLevel(CSOUND *, int messageLevel);
  PUBLIC void csoundInputMessage(CSOUND *, const char *message);
  PUBLIC void csoundKeyPress(CSOUND *, char c);
  PUBLIC int csoundScoreEvent(CSOUND *,
                              char type, const MYFLT *pFields, long numFields);
  PUBLIC void csoundSetExternalMidiInOpenCallback(CSOUND *,
            int (*func)(CSOUND *, void **userData, const char *devName));
  PUBLIC void csoundSetExternalMidiReadCallback(CSOUND *,
            int (*func)(CSOUND *, void *userData,
                                  unsigned char *buf, int nBytes));
  PUBLIC void csoundSetExternalMidiInCloseCallback(CSOUND *,
            int (*func)(CSOUND *, void *userData));
  PUBLIC void csoundSetExternalMidiOutOpenCallback(CSOUND *,
            int (*func)(CSOUND *, void **userData, const char *devName));
  PUBLIC void csoundSetExternalMidiWriteCallback(CSOUND *,
            int (*func)(CSOUND *, void *userData,
                                  const unsigned char *buf, int nBytes));
  PUBLIC void csoundSetExternalMidiOutCloseCallback(CSOUND *,
            int (*func)(CSOUND *, void *userData));
  PUBLIC void csoundSetExternalMidiErrorStringCallback(CSOUND *,
            const char *(*func)(int));
  PUBLIC int csoundSetIsGraphable(CSOUND *, int isGraphable);
  PUBLIC void csoundSetMakeGraphCallback(CSOUND *,
                            void (*makeGraphCallback_)(CSOUND *,
                                                       WINDAT *windat,
                                                       const char *name));
  PUBLIC void csoundSetDrawGraphCallback(CSOUND *,
                            void (*drawGraphCallback_)(CSOUND *,
                                                       WINDAT *windat));
  PUBLIC void csoundSetKillGraphCallback(CSOUND *,
                            void (*killGraphCallback_)(CSOUND *,
                                                       WINDAT *windat));
  PUBLIC void csoundSetExitGraphCallback(CSOUND *,
                            int (*exitGraphCallback_)(CSOUND *));
  PUBLIC int csoundNewOpcodeList(CSOUND *, opcodeListEntry **opcodelist);
  PUBLIC void csoundDisposeOpcodeList(CSOUND *, opcodeListEntry *opcodelist);
  PUBLIC int csoundAppendOpcode(CSOUND *, const char *opname,
                                int dsblksiz, int thread,
                                const char *outypes, const char *intypes,
                                int (*iopadr)(CSOUND *, void *),
                                int (*kopadr)(CSOUND *, void *),
                                int (*aopadr)(CSOUND *, void *));
  PUBLIC void csoundSetYieldCallback(CSOUND *, int (*yieldCallback_)(CSOUND *));
  PUBLIC void csoundSetPlayopenCallback(CSOUND *,
                            int (*playopen__)(CSOUND *,
                                              const csRtAudioParams *parm));
  PUBLIC void csoundSetRtplayCallback(CSOUND *,
                            void (*rtplay__)(CSOUND *,
                                             const MYFLT *outBuf, int nbytes));
  PUBLIC void csoundSetRecopenCallback(CSOUND *,
                            int (*recopen_)(CSOUND *,
                                            const csRtAudioParams *parm));
  PUBLIC void csoundSetRtrecordCallback(CSOUND *,
                            int (*rtrecord__)(CSOUND *,
                                              MYFLT *inBuf, int nbytes));
  PUBLIC void csoundSetRtcloseCallback(CSOUND *, void (*rtclose__)(CSOUND *));
  PUBLIC int csoundTableLength(CSOUND *, int table);
  PUBLIC MYFLT csoundTableGet(CSOUND *, int table, int index);
  PUBLIC void csoundTableSet(CSOUND *, int table, int index, MYFLT value);
  PUBLIC int csoundGetTable(CSOUND *, MYFLT **tablePtr, int tableNum);
  PUBLIC void *csoundCreateThread(uintptr_t (*threadRoutine)(void *),
                                  void *userdata);
  PUBLIC void *csoundGetCurrentThreadId();
  PUBLIC uintptr_t csoundJoinThread(void *thread);
  PUBLIC void *csoundCreateThreadLock(void);
  PUBLIC int csoundWaitThreadLock(void *lock, size_t milliseconds);
  PUBLIC void csoundWaitThreadLockNoTimeout(void *lock);
  PUBLIC void csoundNotifyThreadLock(void *lock);
  PUBLIC void csoundDestroyThreadLock(void *lock);
  PUBLIC void *csoundCreateMutex(int isRecursive);
  PUBLIC void csoundLockMutex(void *mutex_);
  PUBLIC int csoundLockMutexNoWait(void *mutex_);
  PUBLIC void csoundUnlockMutex(void *mutex_);
  PUBLIC void csoundDestroyMutex(void *mutex_);
  PUBLIC void csoundSleep(size_t milliseconds);
  PUBLIC void **csoundGetRtRecordUserData(CSOUND *);
  PUBLIC void **csoundGetRtPlayUserData(CSOUND *);
  PUBLIC int csoundRegisterSenseEventCallback(CSOUND *,
                                              void (*func)(CSOUND *, void *),
                                              void *userData);
  PUBLIC int csoundGetChannelPtr(CSOUND *,
                                 MYFLT **p, const char *name, int type);
  PUBLIC int csoundListChannels(CSOUND *, CsoundChannelListEntry **lst);
  PUBLIC void csoundDeleteChannelList(CSOUND *, CsoundChannelListEntry *lst);